Ressolved visibility issue

--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body{
     color: aliceblue;
 }
 .pressed{
-    opacity: 0.5;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    opacity: 0;
+    box-shadow: rgb(255, 0, 0) 10px 10px 10px, rgb(55, 0, 255) 20px 20px 20px 20px, rgb(0, 0, 0) 20px -30px 20px inset;
 }
 .num1{
     background-color: blue;
